// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute Bitcoin list protocol should return success 1`] = `
{
  "data": {
    "decimals": 8,
    "result": "75100045155",
    "statusCode": 200,
  },
  "jobRunID": "1",
  "result": "75100045155",
  "statusCode": 200,
}
`;

exports[`execute Ethereum list protocol should return success 1`] = `
{
  "data": {
    "result": "220646158354962165",
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": "220646158354962165",
  "statusCode": 200,
}
`;

exports[`execute Filecoin Gemini protocol should return success 1`] = `
{
  "data": {
    "decimals": 0,
    "result": "127530375584000000000000",
    "statusCode": 200,
  },
  "result": "127530375584000000000000",
  "statusCode": 200,
}
`;

exports[`execute Filecoin list protocol w/ miner format address should return success 1`] = `
{
  "data": {
    "decimals": 0,
    "result": "127530375584000000000000",
    "statusCode": 200,
  },
  "result": "127530375584000000000000",
  "statusCode": 200,
}
`;

exports[`execute multiReserves endpoint should return success 1`] = `
{
  "data": {
    "decimals": 18,
    "details": "{"result":"75100045155","statusCode":200,"decimals":8},{"result":"220646158354962165"}",
    "result": "751221097708354962165",
    "statusCode": 200,
    "timestamps": {
      "providerDataReceivedUnixMs": 1641035471111,
      "providerDataRequestedUnixMs": 1641035471111,
    },
  },
  "jobRunID": "1",
  "result": "751221097708354962165",
  "statusCode": 200,
}
`;

exports[`execute multiReserves endpoint view-function-multi-chain fails 1`] = `
{
  "error": {
    "feedID": "054baf47a9ff27c8384416a3ce83c17c",
    "message": "viewFunctionIndexerResultDecimals is a required parameter when using the view-function-multi-chain indexer",
    "name": "Error",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`execute multiReserves endpoint view-function-multi-chain should return success 1`] = `
{
  "data": {
    "decimals": 18,
    "result": "18446744073709551615000000000000",
    "statusCode": 200,
  },
  "jobRunID": "1",
  "result": "18446744073709551615000000000000",
  "statusCode": 200,
}
`;

exports[`execute multiReserves endpoint with scaling should return success 1`] = `
{
  "data": {
    "decimals": 2,
    "details": "{"result":"75100045155","statusCode":200,"decimals":8},{"result":"220646158354962165"}",
    "result": "75122",
    "statusCode": 200,
    "timestamps": {
      "providerDataReceivedUnixMs": 1641035471111,
      "providerDataRequestedUnixMs": 1641035471111,
    },
  },
  "jobRunID": "1",
  "result": "75122",
  "statusCode": 200,
}
`;
